crates/toml/tests/snapshots/invalid/string/bad-hex-esc-03.stderr
TOML parse error at line 1, column 20
  |
1 | bad-hex-esc-03 = "\x"
  |                    ^
missing escaped value, expected `b`, `e`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
